syntax = "proto3";

package ch7.ex2;

option java_package = "uk.me.uohiro.protobuf.model.ch7.ex2";
option java_outer_classname = "InterceptorAPIProto";
option java_multiple_files = true;
option optimize_for = SPEED;

service InterceptorExample {
	rpc GetData(GetDataRequest) returns (GetDataResponse);
}

message GetDataRequest {
	string id = 1;
}

message GetDataResponse {
	string data = 2;
}
